<resources>
    <string name="app_name">Songs</string>

    <string name="textView">Song Title</string>
    <string name="textView2">Singers</string>
    <string name="textView3">Year</string>
    <string name="textView4">Stars</string>

    <string name="editTextText">Enter song title here</string>
    <string name="editTextText2">Enter singers name here</string>
    <string name="editTextText3">Enter year of release here</string>

    <string name="radioButton">1</string>
    <string name="radioButton2">2</string>
    <string name="radioButton3">3</string>
    <string name="radioButton4">4</string>
    <string name="radioButton5">5</string>

    <string name="button">INSERT</string>
    <string name="button2">SHOW LIST</string>

    <string name="button3">SHOW ALL SONGS WITH 5 STARS</string>

    <string name="button7">BACK</string>

    <string name="textView5">Song Title</string>
    <string name="textView6">Singers</string>
    <string name="textView7">Year</string>
    <string name="textView8">Stars</string>

    <string name="editTextText4">Enter song title here</string>
    <string name="editTextText5">Enter singers name here</string>
    <string name="editTextText6">Enter year of release here</string>

    <string name="radioButton6">1</string>
    <string name="radioButton7">2</string>
    <string name="radioButton8">3</string>
    <string name="radioButton9">4</string>
    <string name="radioButton10">5</string>

    <string name="textViewHeader2">Edit Song</string>
    <string name="button4">UPDATE</string>
    <string name="button5">DELETE</string>
    <string name="button6">CANCEL</string>

    <string name="textViewSong">Song</string>
    <string name="textViewHeader">My Songs</string>

    <string name="textViewSongs">Song name</string>
    <string name="textViewYear">Year</string>
    <string name="textViewStars">Stars</string>
    <string name="textViewSingers">Singer</string>
</resources>