<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewSong"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#3F51B5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textViewYear" />

        <TextView
            android:id="@+id/textViewStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewStars"
            android:textColor="#E91E63" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewSingers"
        android:textColor="#2196F3" />
</LinearLayout>